--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav ul li a:hover::after {
 .college-logo {
     width: 120px;
     height: auto;
-    margin-bottom: 1rem;
+    margin-top: 8rem;
     filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
 }
 
