--- a/style.css
+++ b/style.css
@@ -319,6 +319,10 @@ h2 {
     color: var(--secondary-color);
 }
 
+.coordinator h3 {
+    color: var(--accent-color);
+}
+
 .registration-info {
     display: flex;
     justify-content: center;
